--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
                 <div class="row  p-4 bg-success ">
                     <div class="logo col-6 col-sm-7 col-md-5">
-                        <a href="#" class="link">
+                        <a href="index.html" class="link">
                             <img src="img/logo.jpg" alt=""  width="60" height="60">
                         </a>
                     </div>
@@ -63,22 +63,22 @@
                                     </div>
                             </div>
                 </div>
-                        <div class="row p-5 badge-dark ">
+                        <div class="row p-5 bg-dark ">
                                <a class="dropdown-toggle d-none d-md-block col-md-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   Pastry
                                </a>
                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <a class="dropdown-item" href="#">bread</a>
-                                            <a class="dropdown-item" href="#">pizza</a>
-                                            <a class="dropdown-item" href="#">cookies</a>
+                                            <a class="dropdown-item" href="bread.html">bread</a>
+                                            <a class="dropdown-item" href="pizza.html">pizza</a>
+                                            <a class="dropdown-item" href="cookies.html">cookies</a>
                                         </div>
                                         <div class="dropdown d-none d-md-block col-md-2">
                                             <a class=" bg-econdary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                               Groccery
                                             </a>
                                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                  <a class="dropdown-item" href="#">Vegetables</a>
-                                                   <a class="dropdown-item" href="#">Fruits</a>
+                                                  <a class="dropdown-item" href="vegetables.html">Vegetables</a>
+                                                   <a class="dropdown-item" href="fruits.html">Fruits</a>
                                                 </div>
                                         </div>
                                             <div class="dropdown d-none d-md-block col-md-2">
@@ -86,8 +86,8 @@
                                                   Sweet
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                  <a class="dropdown-item" href="#">Cakes</a>
-                                                   <a class="dropdown-item" href="#">Candy</a>
+                                                  <a class="dropdown-item" href="cakes.html">Cakes</a>
+                                                   <a class="dropdown-item" href="candy.html">Candy</a>
                                                 </div>
                                             </div>
                                             <div class="dropdown d-none d-md-block col-md-2">
@@ -95,10 +95,10 @@
                                                    Diary
                                                  </a>
                                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                   <a class="dropdown-item" href="#">milk</a>
-                                                    <a class="dropdown-item" href="#">sour cream</a>
-                                                    <a class="dropdown-item" href="#">yogurt</a>
-                                                    <a class="dropdown-item" href="#">cottage cheese</a>
+                                                   <a class="dropdown-item" href="milk.html">milk</a>
+                                                    <a class="dropdown-item" href="cream.html">sour cream</a>
+                                                    <a class="dropdown-item" href="yogurt.html">yogurt</a>
+                                                    <a class="dropdown-item" href="tvarog.html">cottage cheese</a>
                                                  </div>
                                              </div>
                                              <div class="dropdown d-none d-md-block col-md-2">
@@ -106,9 +106,9 @@
                                                    Drinks
                                                  </a>
                                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                     <a class="dropdown-item" href="#">juices</a>
-                                                     <a class="dropdown-item" href="#">carbonated drinks</a>
-                                                     <a class="dropdown-item" href="#">alcoholic beverages</a>
+                                                     <a class="dropdown-item" href="juices.html">juices</a>
+                                                     <a class="dropdown-item" href="drinks.html">carbonated drinks</a>
+                                                     <a class="dropdown-item" href="alcohol.html">alcoholic beverages</a>
                                                     </div>
                                              </div>
                                                   <div class="dropdown d-none d-md-block col-md-2">
@@ -116,13 +116,13 @@
                                                        Meat
                                                        </a>
                                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                          <a class="dropdown-item" href="#">sausages</a>
-                                                          <a class="dropdown-item" href="#">animal meat</a>
+                                                          <a class="dropdown-item" href="sausage.html">sausages</a>
+                                                          <a class="dropdown-item" href="meat.html">animal meat</a>
                                                         </div>
                                                     </div>
                                                     <div class="row ">
                                                         <div class="col-12 p-0 d-block d-md-none">
-                                                               <nav class="navbar navbar-expand-xl navbar-dark b25">
+                                                               <nav class="navbar navbar-expand-xl navbar-dark ">
                                                         
                                                         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="outline: none; border: none;">
                                                           <span class="navbar-toggler-icon"></span>
@@ -137,9 +137,9 @@
                                                                 Pastry
                                                               </a>
                                                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                <a class="dropdown-item" href="#">bread</a>
-                                                                <a class="dropdown-item" href="#">pizza</a>
-                                                                <a class="dropdown-item" href="#">cookies</a>
+                                                                <a class="dropdown-item" href="bread.html">bread</a>
+                                                                <a class="dropdown-item" href="pizza.html">pizza</a>
+                                                                <a class="dropdown-item" href="cookies.html">cookies</a>
                                                               </div>
                                                             </li>
                                                              <li class="nav-item dropdown text-center">
@@ -147,8 +147,8 @@
                                                                 Groccery
                                                               </a>
                                                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                <a class="dropdown-item" href="#">Vegetables</a>
-                                                                <a class="dropdown-item" href="#">Fruits</a>
+                                                                <a class="dropdown-item" href="vegetables.html">Vegetables</a>
+                                                                <a class="dropdown-item" href="fruits.html">Fruits</a>
                                                               </div>
                                                             </li>
                                                              <li class="nav-item dropdown text-center">
@@ -156,18 +156,18 @@
                                                                 Sweet
                                                               </a>
                                                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                <a class="dropdown-item" href="#">Cakes</a>
-                                                                <a class="dropdown-item" href="#">Candy</a>
+                                                                <a class="dropdown-item" href="cakes.html">Cakes</a>
+                                                                <a class="dropdown-item" href="candy.html">Candy</a>
                                                               </div>
                                                               <li class="nav-item dropdown text-center">
                                                                 <a class="d-md-none nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                                   Diary
                                                                 </a>
                                                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                    <a class="dropdown-item" href="#">milk</a>
-                                                                    <a class="dropdown-item" href="#">sour cream</a>
-                                                                    <a class="dropdown-item" href="#">yogurt</a>
-                                                                    <a class="dropdown-item" href="#">cottage cheese</a>
+                                                                    <a class="dropdown-item" href="milk.html">milk</a>
+                                                                    <a class="dropdown-item" href="cream.html">sour cream</a>
+                                                                    <a class="dropdown-item" href="yogurt.html">yogurt</a>
+                                                                    <a class="dropdown-item" href="tvarog.html">cottage cheese</a>
                                                                 </div>
                                                               </li>
                                                                <li class="nav-item dropdown text-center">
@@ -175,9 +175,9 @@
                                                                   Drinks
                                                                 </a>
                                                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                    <a class="dropdown-item" href="#">juices</a>
-                                                                    <a class="dropdown-item" href="#">carbonated drinks</a>
-                                                                    <a class="dropdown-item" href="#">alcoholic beverages</a> 
+                                                                    <a class="dropdown-item" href="juices.html">juices</a>
+                                                                    <a class="dropdown-item" href="drinks.html">carbonated drinks</a>
+                                                                    <a class="dropdown-item" href="alcohol.html">alcoholic beverages</a> 
                                                                 </div>
                                                               </li>
                                                                <li class="nav-item dropdown text-center">
@@ -185,8 +185,8 @@
                                                                   Meat
                                                                 </a>
                                                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                    <a class="dropdown-item" href="#">sausages</a>
-                                                                    <a class="dropdown-item" href="#">animal meat</a>
+                                                                    <a class="dropdown-item" href="sausage.html">sausages</a>
+                                                                    <a class="dropdown-item" href="meat.html">animal meat</a>
                                                                 </div>
                                                             </li>
                                                              
@@ -255,7 +255,7 @@
                                     <img src="img/armenia spitak gini.jpg" class="card-img-top" alt="...">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">'ARMENIA'spitak anapak gini</h5>
-                                      <p class="card-text">10.99$</p>
+                                      <p class="card-text">3590 dram</p>
                                       <a href="#" class="btn btn-primary">Buy</a>
                                     </div>
                                   </div>
@@ -263,7 +263,7 @@
                                     <img src="img/nutella.jpg" class="card-img-top" alt="...">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">Shokolade krem pndukov 'Nutella' 750g</h5>
-                                      <p class="card-text">1.59$</p>
+                                      <p class="card-text">450 dram</p>
                                       <a href="#" class="btn btn-primary">Buy</a>
                                     </div>
                                   </div>
@@ -271,7 +271,7 @@
                                     <img src="img/atenq ershik.jpg" class="card-img-top" alt="...">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">Ershik 'ATENQ'</h5>
-                                      <p class="card-text">0.65$</p>
+                                      <p class="card-text">320 dram</p>
                                       <a href="#" class="btn btn-primary">Buy</a>
                                     </div>
                                   </div>
@@ -279,7 +279,7 @@
                                     <img src="img/tomat artfud.jpg" alt="">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">Tomati macuk 'ARTFOOD' 250g</h5>
-                                      <p class="card-text">1.25$</p>
+                                      <p class="card-text">300 dram</p>
                                       <a href="#" class="btn btn-primary">Buy</a>
                                     </div>
                                   </div>
