--- a/fruits.html
+++ b/fruits.html
@@ -317,7 +317,7 @@
                                                                             <img src="img/gilas.jpg" class="card-img-top" alt="...">
                                                                             <div class="card-body d-flex flex-column justify-content-end bg-dark">
                                                                               <h5 class="card-title"><a href="">Gilas karmir</a></h5>
-                                                                              <p class="card-text  text-warning">1 kap - 900 dram</p>
+                                                                              <p class="card-text  text-warning">1 kg - 900 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
