--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
                                </a>
                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <a class="dropdown-item" href="bread.html">bread</a>
-                                            <a class="dropdown-item" href="pizza.html">pizza</a>
-                                            <a class="dropdown-item" href="cookies.html">cookies</a>
+                                            <a class="dropdown-item" href="product.html">pizza</a>
+                                            <a class="dropdown-item" href="product.html">cookies</a>
                                         </div>
                                         <div class="dropdown d-none d-md-block col-md-2">
                                             <a class=" bg-econdary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                               Groccery
                                             </a>
                                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                  <a class="dropdown-item" href="vegetables.html">Vegetables</a>
+                                                  <a class="dropdown-item" href="product.html">Vegetables</a>
                                                    <a class="dropdown-item" href="fruits.html">Fruits</a>
                                                 </div>
                                         </div>
@@ -87,7 +87,7 @@
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                                   <a class="dropdown-item" href="cakes.html">Cakes</a>
-                                                   <a class="dropdown-item" href="candy.html">Candy</a>
+                                                   <a class="dropdown-item" href="product.html">Candy</a>
                                                 </div>
                                             </div>
                                             <div class="dropdown d-none d-md-block col-md-2">
@@ -95,10 +95,10 @@
                                                    Diary
                                                  </a>
                                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                   <a class="dropdown-item" href="milk.html">milk</a>
+                                                   <a class="dropdown-item" href="product.html">milk</a>
                                                     <a class="dropdown-item" href="cream.html">sour cream</a>
-                                                    <a class="dropdown-item" href="yogurt.html">yogurt</a>
-                                                    <a class="dropdown-item" href="tvarog.html">cottage cheese</a>
+                                                    <a class="dropdown-item" href="product.html">yogurt</a>
+                                                    <a class="dropdown-item" href="product.html">cottage cheese</a>
                                                  </div>
                                              </div>
                                              <div class="dropdown d-none d-md-block col-md-2">
@@ -106,7 +106,7 @@
                                                    Drinks
                                                  </a>
                                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                     <a class="dropdown-item" href="juices.html">juices</a>
+                                                     <a class="dropdown-item" href="product.html">juices</a>
                                                      <a class="dropdown-item" href="drinks.html">carbonated drinks</a>
                                                      <a class="dropdown-item" href="alcohol.html">alcoholic beverages</a>
                                                     </div>
@@ -117,7 +117,7 @@
                                                        </a>
                                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                                           <a class="dropdown-item" href="sausage.html">sausages</a>
-                                                          <a class="dropdown-item" href="meat.html">animal meat</a>
+                                                          <a class="dropdown-item" href="product.html">animal meat</a>
                                                         </div>
                                                     </div>
                                                     <div class="row ">
@@ -138,8 +138,8 @@
                                                               </a>
                                                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                                                 <a class="dropdown-item" href="bread.html">bread</a>
-                                                                <a class="dropdown-item" href="pizza.html">pizza</a>
-                                                                <a class="dropdown-item" href="cookies.html">cookies</a>
+                                                                <a class="dropdown-item" href="product.html">pizza</a>
+                                                                <a class="dropdown-item" href="product.html">cookies</a>
                                                               </div>
                                                             </li>
                                                              <li class="nav-item dropdown text-center">
@@ -147,7 +147,7 @@
                                                                 Groccery
                                                               </a>
                                                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                <a class="dropdown-item" href="vegetables.html">Vegetables</a>
+                                                                <a class="dropdown-item" href="product.html">Vegetables</a>
                                                                 <a class="dropdown-item" href="fruits.html">Fruits</a>
                                                               </div>
                                                             </li>
@@ -157,17 +157,17 @@
                                                               </a>
                                                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                                                 <a class="dropdown-item" href="cakes.html">Cakes</a>
-                                                                <a class="dropdown-item" href="candy.html">Candy</a>
+                                                                <a class="dropdown-item" href="product.html">Candy</a>
                                                               </div>
                                                               <li class="nav-item dropdown text-center">
                                                                 <a class="d-md-none nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                                   Diary
                                                                 </a>
                                                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                    <a class="dropdown-item" href="milk.html">milk</a>
+                                                                    <a class="dropdown-item" href="product.html">milk</a>
                                                                     <a class="dropdown-item" href="cream.html">sour cream</a>
-                                                                    <a class="dropdown-item" href="yogurt.html">yogurt</a>
-                                                                    <a class="dropdown-item" href="tvarog.html">cottage cheese</a>
+                                                                    <a class="dropdown-item" href="product.html">yogurt</a>
+                                                                    <a class="dropdown-item" href="product.html">cottage cheese</a>
                                                                 </div>
                                                               </li>
                                                                <li class="nav-item dropdown text-center">
@@ -175,7 +175,7 @@
                                                                   Drinks
                                                                 </a>
                                                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                                                    <a class="dropdown-item" href="juices.html">juices</a>
+                                                                    <a class="dropdown-item" href="product.html">juices</a>
                                                                     <a class="dropdown-item" href="drinks.html">carbonated drinks</a>
                                                                     <a class="dropdown-item" href="alcohol.html">alcoholic beverages</a> 
                                                                 </div>
@@ -186,7 +186,7 @@
                                                                 </a>
                                                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                                                     <a class="dropdown-item" href="sausage.html">sausages</a>
-                                                                    <a class="dropdown-item" href="meat.html">animal meat</a>
+                                                                    <a class="dropdown-item" href="product.html">animal meat</a>
                                                                 </div>
                                                             </li>
                                                              
